Telegraf now also monitors your connection to github.com and 1.1.1.1

--- a/app/docker/configs/docker-gen/templates/telegraf.conf.tmpl
+++ b/app/docker/configs/docker-gen/templates/telegraf.conf.tmpl
@@ -823,7 +823,7 @@
   ## via setcap cap_net_raw+p /bin/ping
   #
   ## List of urls to ping
-  urls = ["www.google.com", "influxdb"] # required
+  urls = ["www.google.com", "github.com", "1.1.1.1", "influxdb"] # required
   ## number of pings to send per collection (ping -c <COUNT>)
   # count = 1
   ## interval, in s, at which to ping. 0 == default (ping -i <PING_INTERVAL>)
