--- a/app/docker/configs/docker-gen/templates/telegraf.conf.tmpl
+++ b/app/docker/configs/docker-gen/templates/telegraf.conf.tmpl
@@ -62,7 +62,7 @@
   ## Precision will NOT be used for service inputs. It is up to each individual
   ## service input to set the timestamp at the appropriate precision.
   ## Valid time units are "ns", "us" (or "µs"), "ms", "s".
-  precision = "s"
+  precision = "1s"
 
   ## Logging configuration:
   ## Run telegraf with debug log messages.
@@ -112,8 +112,8 @@
   # timeout = "5s"
 
   ## HTTP Basic Auth
-  # username = "telegraf"
-  # password = "metricsmetricsmetricsmetrics"
+  username = "root"
+  password = "root"
 
   ## HTTP User-Agent
   # user_agent = "telegraf"
@@ -508,7 +508,7 @@
 #
 #   ## Whether to report for each container per-device blkio (8:0, 8:1...) and
 #   ## network (eth0, eth1, ...) stats or not
-#   perdevice = true
+#   perdevice_include = true
 #   ## Whether to report for each container total blkio and network stats or not
 #   total = false
 #   ## Which environment variables should we use as a tag
@@ -587,7 +587,7 @@
 # HTTP/HTTPS request given an address a method and a timeout
 [[inputs.http_response]]
   ## Server address (default http://localhost)
-  address = "http://tick:8888"
+  urls = ["http://tick:8888"]
 
   ## Set http_proxy (telegraf uses the system wide proxy settings if it's is not set)
   # http_proxy = "http://localhost:8888"
@@ -922,7 +922,7 @@
 ###############################################################################
 
 # Influx HTTP write listener
-[[inputs.http_listener]]
+[[inputs.http_listener_v2]]
   ## Address and port to host HTTP listener on
   service_address = ":8086"
 
@@ -1006,7 +1006,7 @@
 
   ## Parses tags in the datadog statsd format
   ## http://docs.datadoghq.com/guides/dogstatsd/
-  parse_data_dog_tags = true
+  datadog_extensions = true
 
   ## Statsd data translation templates, more info can be read here:
   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md#graphite
